@@ -17,15 +17,6 @@
 
 package com.decathlon.ara.coverage;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
-
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import com.decathlon.ara.common.NotGonnaHappenException;
 import com.decathlon.ara.domain.Functionality;
 import com.decathlon.ara.domain.enumeration.FunctionalityType;
@@ -33,6 +24,13 @@ import com.decathlon.ara.repository.FunctionalityRepository;
 import com.decathlon.ara.service.dto.coverage.AxisDTO;
 import com.decathlon.ara.service.dto.coverage.AxisPointDTO;
 import com.decathlon.ara.service.dto.coverage.CoverageDTO;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.Set;
 
 @Service
 @Transactional
@@ -72,7 +70,7 @@ public class CoverageService {
                 .map(generator -> new AxisDTO(
                         generator.getCode(),
                         generator.getName(),
-                        getAllPoints(generator, projectId))).collect(Collectors.toList()));
+                        getAllPoints(generator, projectId))).toList());
 
         coverage.setValues(computeValues(functionalities, coverage.getAxes(), generators));
 
@@ -82,7 +80,7 @@ public class CoverageService {
     List<AxisPointDTO> getAllPoints(AxisGenerator generator, long projectId) {
         List<AxisPointDTO> points = new ArrayList<>();
         points.add(AxisPointDTO.ALL);
-        points.addAll(generator.getPoints(projectId).collect(Collectors.toList()));
+        points.addAll(generator.getPoints(projectId).toList());
         return points;
     }
 
