@@ -17,19 +17,6 @@
 
 package com.decathlon.ara.scenario.common.service;
 
-import static java.util.Comparator.comparing;
-import static java.util.Comparator.naturalOrder;
-import static java.util.Comparator.nullsFirst;
-
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.stream.Collectors;
-
-import org.apache.commons.lang3.StringUtils;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import com.decathlon.ara.domain.Severity;
 import com.decathlon.ara.domain.Source;
 import com.decathlon.ara.domain.projection.IgnoredScenario;
@@ -44,6 +31,15 @@ import com.decathlon.ara.service.dto.scenario.ScenarioSummaryDTO;
 import com.decathlon.ara.service.dto.severity.SeverityDTO;
 import com.decathlon.ara.service.dto.source.SourceDTO;
 import com.decathlon.ara.service.mapper.GenericMapper;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+
+import static java.util.Comparator.*;
 
 /**
  * Service for managing Scenario.
@@ -149,7 +145,7 @@ public class ScenarioService {
             // Add the counts of scenarios to the triple' severity, as well as the the ALL-SEVERITIES count
             final List<SeverityDTO> severitiesToIncrement = severitiesWithAll.stream()
                     .filter(severity -> Severity.ALL.getCode().equals(severity.getCode()) || severity.getCode().equals(effectiveSeverityCode))
-                    .collect(Collectors.toList());
+                    .toList();
             for (SeverityDTO severity : severitiesToIncrement) {
                 ScenarioIgnoreSeverityDTO result = getOrCreate(resultList, ignoreCount.getSource(), severity);
                 // Increment the count of TOTAL scenarios and the count of IGNORED scenarios (if the count is counting ignored scenarios)
