@@ -17,13 +17,6 @@
 
 package com.decathlon.ara.scenario.generic.upload;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.stereotype.Component;
-import org.springframework.util.CollectionUtils;
-
 import com.decathlon.ara.domain.Scenario;
 import com.decathlon.ara.domain.Source;
 import com.decathlon.ara.domain.enumeration.Technology;
@@ -32,6 +25,11 @@ import com.decathlon.ara.scenario.generic.bean.GenericExecutedScenarioReport;
 import com.decathlon.ara.scenario.generic.bean.description.GenericExecutedScenarioDescription;
 import com.decathlon.ara.scenario.generic.bean.feature.GenericExecutedScenarioFeature;
 import com.decathlon.ara.service.exception.BadRequestException;
+import org.springframework.stereotype.Component;
+import org.springframework.util.CollectionUtils;
+
+import java.util.ArrayList;
+import java.util.List;
 
 @Component
 public class GenericScenarioUploader {
@@ -49,7 +47,7 @@ public class GenericScenarioUploader {
             }
             return genericReports.stream()
                     .map(report -> convertGenericReportToScenario(report, source))
-                    .collect(Collectors.toList());
+                    .toList();
         });
     }
 
